--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = null;
+    const serviceWorkerVersion = "1278322418";
   </script>
   <script src="flutter.js" defer></script>
 </head>
